fix video format issue on mobile

--- a/assets/scss/pages/_page-project.scss
+++ b/assets/scss/pages/_page-project.scss
@@ -177,7 +177,7 @@
 
     .page-project__video-wrapper {
         width: 100%;
-        height: getVideoHeightFromWidth(24, 24, 80px, 0.58);
+        height: auto;
     }
 
     .page-project__description-container {
