--- a/assets/scss/partials/_video-player.scss
+++ b/assets/scss/partials/_video-player.scss
@@ -82,3 +82,17 @@
     transform-origin: left top;
     transform: scaleX(0);
 }
+
+@include mq-extra-narrow {
+    .video-player {
+        position: relative;
+    
+        width: 100%;
+        height: auto;
+    }
+
+    .video-player__video, .video-player__image {
+        position: relative;
+        height: auto;
+    }
+}
